<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.example.ovidio.ubertaxi.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:background="@drawable/principal"
        android:scaleType="centerCrop">

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:id="@+id/layoutClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutUsuario"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/EditT_Contrasena"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/relativeLayout2"
                    android:layout_alignStart="@+id/relativeLayout2"
                    android:layout_alignTop="@+id/relativeLayout2"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/et_clave"
                    android:inputType="textPassword"
                    android:padding="5dip"
                    android:textColor="@color/colorPrimaryText" />

                <TextView
                    android:id="@+id/recuperarClave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="end"
                    android:layout_toEndOf="@+id/pregunta_registro"
                    android:layout_toRightOf="@+id/pregunta_registro"
                    android:text="@string/tv_recuperarClave"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/EditT_Correo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/et_usuario"
                    android:inputType="text"
                    android:padding="5dip"
                    android:textColor="@color/colorPrimaryText" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/Btn_Iniciar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="17dp"

        android:text="@string/btnString_iniciar"
        android:textSize="20sp"
        android:theme="@style/BtnRaised" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp">

        <TextView
            android:id="@+id/pregunta_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/tv_preguntaRegistro"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="9dp"
            android:layout_marginStart="9dp"
            android:layout_toEndOf="@+id/pregunta_registro"
            android:layout_toRightOf="@+id/pregunta_registro"
            android:text="@string/tv_registrar"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>
